# csc468-project

./: .gitignore  .ignore  .mailmap  .rgignore  CODEOWNERS  README.md  diagram.drawio  docker-compose.yml  flake.nix  garnix.yaml  justfile  nginx.conf  profile.py  shell.nix
.github/workflows/: nix.yml
backend-api/: Cargo.toml
backend-api/src/: auth.rs  debug.rs  main.rs
containers/: deploy-host.nix  docker-compose.dev.yml  docker-compose.yml  key.pem  nginx.conf  pg_hba.conf  postgresql.conf
containers/db-init/: Cargo.toml
containers/db-init/src/: main.rs
devCert/: cert.crt
frontend/: .env.development  .gitignore  article-detail.html  bookmarks.html  eslint.config.js  feeds.html  index.html  package-lock.json  package.json  style.css  vite.config.js  vite.config.ts
frontend/RSS/: index.html  package.json  rss.docx
frontend/RSS/public/: bookmarks.html
frontend/RSS/src/assets/: styles.css
frontend/public/: Aggre-Gator.html  article-detail.html  bookmarks.html  feeds.html  index.html
frontend/src/: article-detail.ts  bookmarks.ts  feeds.ts  index.ts  login.ts  main.js  main.ts  style.css
frontend/src/assets/: scripts.js
frontend/src/data/: mock-data.ts
frontend/src/models/: article.ts  feed.ts
frontend/src/utils/: api.ts  dom-utils.ts
node/: Dockerfile  app.js  db.js  package-lock.json  package.json
node/views/: getshark.html
report/: bibliography.yml  diagram.drawio  main.typ
