[package]
name = "backend-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.1", features = ["json", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44.1", features = ["rt-multi-thread"] }
tokio-postgres = "0.7.13"
jsonwebtoken = "9.3.0"
oauth2 = { version = "4.4.0", features = ["reqwest"] }
reqwest = { version = "0.11.22", features = ["json"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
tower-http = { version = "0.5.1", features = ["cors"] }
urlencoding = "2.1.3"
